public/styles/sidebar.css
aside {
	height: 100%;
	width: 200px;
	padding: 1rem;
	display: flex;
	flex-direction: column;
	gap: 1rem;
	border-right: 1px solid darkgrey;
}

aside a {
	text-decoration: none;
	color: inherit;
	display: flex;
	align-items: center;
	gap: 0.5rem;
	width: 100%;
	padding: 0.5rem 0;
	overflow: hidden;
	text-overflow: ellipsis;
}

nav.sidebar-nav {
	display: flex;
	flex-direction: column;
	gap: 0.25rem;
}

sl-tree {
	--indent-guide-width: 1px;
}

.sl-btn::part(base) {
	justify-content: left;
}

sl-tree-item::part(label) {
	font-size: 0.8rem;
	display: block;
	width: 100%;
	overflow: hidden;
}

